Fixed rendering issue on iPhone 5

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -90,7 +90,7 @@ body {
 }
 
 .navbar h4 {
-    margin-left: 15px;
+    margin-left: 10px;
     margin-top: 15px;
     margin-right: 20px;
 }
@@ -125,7 +125,7 @@ h3.panel-title {
     background-image: -ms-linear-gradient(bottom, #4A4A4A 0%, #757575 100%);
     background-image: linear-gradient(to bottom, #4A4A4A 0%, #757575 100%);
     font-family: digitaldream;
-    font-size: 14px;
+    font-size: 12px;
     color: #F2F5A9;
     padding: 10px;
     border-top: 1px solid #AAAAAA;
